<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ErgasiaAndroid</string>
    <string name="payment_title">Λεπτομέρειες Συναλλαγής</string>
    <string name="amount">Ποσό Πληρωμής</string>
    <string name="card_number">Αριθμός Κάρτας</string>
    <string name="expiry_month">Μήνας</string>
    <string name="expiry_year">Έτος</string>
    <string name="cvv">CVV</string>
    <string name="hint_card_holder">Όνομα Κατόχου</string>
    <string name="pay">ΠΛΗΡΩΜΗ</string>
    <string name="cancel">ΑΚΥΡΩΣΗ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_maps">MapsActivity</string>

    <string name="search_hint">Αναζήτηση Parking</string>
    <string name="info_button">ΠΛΗΡΟΦΟΡΙΕΣ</string>
    <string name="filter_spinner_desc">Επιλογή φίλτρου θέσεων</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>

    <string-array name="availability_options">
        <item>Όλες</item>
        <item>Διαθέσιμες</item>
        <item>Κατειλημμένες</item>
    </string-array>



</resources>
